# aw-importer-ical

./: README.md  pyproject.toml
aw_importer_ical/: __main__.py  main.py
