[tool.poetry]
name = "aw-importer-ical"
version = "0.0.1"
description = "ical importer for ActivityWatch"
authors = ["Zach Strout <zachstrout@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/RTnhN/aw-importer-ical"

[tool.poetry.scripts]
aw-importer-ical = "aw_importer_ical:main"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
aw-client = "^0.5.7"
aw-core = "^0.5.0"
watchdog = "^5.0.2"
icalendar = "^4.0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
